# mapi-rs

./: .gitignore  Cargo.toml  README.md  SUPPORT.md  release-plz.toml
.github/workflows/: release-plz.yml  rust.yml
crates/mapi/: CHANGELOG.md  Cargo.toml  README.md
crates/mapi-stub/: CHANGELOG.md  Cargo.toml  README.md
crates/mapi-stub/src/: lib.rs
crates/mapi-sys/: CHANGELOG.md  Cargo.toml  README.md
crates/mapi-sys/src/: Microsoft.rs  bindings.rs  installation.rs  lib.rs  load_mapi.rs
crates/mapi/examples/: sample.rs
crates/mapi/src/: lib.rs  mapi_initialize.rs  mapi_logon.rs  mapi_ptr.rs  prop_tag.rs  prop_value.rs  row.rs  row_set.rs  sized_types.rs
crates/update-bindings/: Cargo.toml  README.md  build.rs
crates/update-bindings/mapi-scrubbed/: CMakeLists.txt  testbuild.cpp
crates/update-bindings/mapi-scrubbed/importlib/: CMakeLists.txt  mapi32.def  olmapi32.def
crates/update-bindings/mapi-scrubbed/scrubber/: CMakeLists.txt  ScrubHeaders.tt
crates/update-bindings/src/: main.rs
crates/update-bindings/winmd/: .gitignore  MAPIWin32Metadata.proj  Microsoft.Office.Outlook.MAPI.Win32.winmd  main.cpp  update.ps1
crates/update-bindings/winmd/mapi-scrubbed/: .gitignore  CMakeLists.txt  README.md  testbuild.cpp
crates/update-bindings/winmd/mapi-scrubbed/importlib/: CMakeLists.txt
mapi-scrubbed/importlib/: CMakeLists.txt  olmapi32.def
mapi-scrubbed/importlib/x64/: olmapi32.lib
mapi-scrubbed/importlib/x86/: mapi32.lib  olmapi32.lib
mapi-win32md/: MAPIWin32Metadata.proj
winmd/: MAPIWin32Metadata.proj  update.ps1
winmd/mapi-scrubbed/: CMakeLists.txt
winmd/mapi-scrubbed/importlib/: CMakeLists.txt
winmd/mapi-scrubbed/importlib/x64/: mapi32.lib
winmd/mapi-scrubbed/include/: MAPIConstants.h
winmd/mapi-scrubbed/scrubber/: CMakeLists.txt
