[workspace]
members = [
    "crates/update-bindings",
    "crates/mapi-stub",
    "crates/mapi-sys",
    "crates/mapi",
]
resolver = "3"

[workspace.package]
authors = [ "Microsoft" ]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/microsoft/mapi-rs"
license = "MIT"
keywords = [ "win32", "outlook", "mapi" ]
categories = [ "os::windows-apis" ]

[workspace.dependencies.outlook-mapi-stub]
version = "0.3.1"
path = "crates/mapi-stub"

[workspace.dependencies.outlook-mapi-sys]
version = "0.7.4"
path = "crates/mapi-sys"
default-features = false

[workspace.dependencies]
cmake = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = { version = "2.0", features = [ "full" ] }
thiserror = "2.0"
windows-bindgen = "0.62"
windows-core = "0.61"
windows-implement = "0.60"
windows-interface = "0.59"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
    "Win32_Storage_Imapi",
    "Win32_System_AddressBook",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Com_Urlmon",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
]
