[package]
name = "outlook-mapi-stub"
version = "0.2.1"
edition = "2021"
description = "Macros which generate delay load helpers for olmapi32.dll"
repository = "https://github.com/wravery/mapi-rs"
license = "MIT"
keywords = [ "win32", "outlook", "mapi" ]
categories = [ "os::windows-apis" ]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = { version = "2.0.13", features = ["full"] }
