[package]
name = "outlook-mapi-stub"
version = "0.3.1"
description = "Macros which generate delay load helpers for olmapi32.dll"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
