[package]
name = "outlook-mapi-sys"
version = "0.7.3"
description = "Bindings generated with the windows crate for the Outlook MAPI interface"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[features]
default = [ "olmapi32" ]
olmapi32 = [
    "windows/Win32_System_ApplicationInstallationAndServicing",
]

[dependencies]
outlook-mapi-stub.workspace = true

windows.workspace = true
windows-core.workspace = true

[build-dependencies]
thiserror.workspace = true
