[package]
name = "outlook-mapi"
version = "0.14.5"
edition = "2021"
rust-version = "1.76"
description = "Rust bindings for the Outlook MAPI interface"
repository = "https://github.com/wravery/mapi-rs"
license = "MIT"
keywords = [ "win32", "outlook", "mapi" ]
categories = [ "os::windows-apis" ]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[features]
default = [ "olmapi32" ]
olmapi32 = [ "outlook-mapi-sys/olmapi32" ]

[dependencies]
outlook-mapi-sys = { version = "0.5.7", default-features = false }
windows-core = "0.58"
windows-implement = "0.58"
windows-interface = "0.58"

[dependencies.windows]
version = "0.58"
features = [ "implement" ]

[dev-dependencies]
regex = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[dev-dependencies.windows]
version = "0.58"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
