[package]
name = "outlook-mapi"
version = "0.15.2"
description = "Rust bindings for the Outlook MAPI interface"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "i686-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]

[features]
default = [ "olmapi32" ]
olmapi32 = [ "outlook-mapi-sys/olmapi32" ]

[dependencies]
outlook-mapi-sys.workspace = true

windows.workspace = true
windows-core.workspace = true
windows-implement.workspace = true
windows-interface.workspace = true

[dev-dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies.windows]
workspace = true
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
